...

    var window: UIWindow?


    func application(_ application: UIApplication, didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]?) -> Bool {
        // Override point for customization after application launch.
        if  ProcessInfo.processInfo.arguments.contains("UITest") || ProcessInfo.processInfo.environment.keys.contains("UITest") {
            RealmUtils().seedDB()
        }
        return true
    }

    func applicationWillResignActive(_ application: UIApplication) {
...
