...
    }
    var contactModel: Contact = Contact()
    var initialContactVM: ContactViewModel = ContactViewModel()
    let numOfSections: Int = 6 // Name, PhoneNums, Emails, Address, Birthday
    let cellIdentifier = "UpdateCell"
    let deleteCellIdentifier = "DeleteCell"
    static let tablelIdentifier = "UpdateTableId"
    var isNewContact: Bool = false
    let realmUtil: RealmUtils = RealmUtils()
    let datePicker: UIDatePicker = UIDatePicker()

    override func viewDidLoad() {
        super.viewDidLoad()
...
